@@ -65,18 +65,87 @@ public class QuatroClientSummaryAction extends BaseClientAction {
 //        actionParam.put("stringArray", new String[] { "Value 1", "Value 2", "Value 3" }); 
        }
 
-       request.setAttribute("actionParam", actionParam);
-
        String demographicNo= (String)actionParam.get("clientId");
 
        request.getSession().setAttribute(KeyConstants.SESSION_KEY_CURRENT_MODULE, KeyConstants.MODULE_ID_CLIENT);
        
-       setEditAttributes(form, request, demographicNo);
-       logManager.log("read", "client", demographicNo, request);
+//       setEditAttributes(form, request, demographicNo);
+       Integer shelterId=(Integer)request.getSession().getAttribute(KeyConstants.SESSION_KEY_SHELTERID);
+       
+       request.setAttribute("clientId", demographicNo);
+       request.setAttribute("client", clientManager.getClientByDemographicNo(demographicNo));
+
+       String providerNo = ((Provider) request.getSession().getAttribute("provider")).getProviderNo();
+       
+       List lst = intakeManager.getActiveQuatroIntakeHeaderListByFacility(Integer.valueOf(demographicNo), shelterId, providerNo);
+       QuatroIntakeHeader obj0 = null;
+       Integer programId=null;
+       if(lst.size()>0) {
+    	   obj0=  (QuatroIntakeHeader)lst.get(0);
+    	   programId=obj0.getProgramId();
+       }
+      
+       boolean readOnly= super.isReadOnly(request, "", KeyConstants.FUN_PMM_CLIENTHEALTHSAFETY, programId);
+       request.setAttribute("isReadOnly",Boolean.valueOf(readOnly));
+       
+       for(int i=0;i<lst.size();i++){
+    	 QuatroIntakeHeader obj = (QuatroIntakeHeader)lst.get(i);
+    	 if(obj.getProgramType().equals(KeyConstants.BED_PROGRAM_TYPE)){
+    		List lst2 = intakeManager.getClientFamilyByIntakeId(obj.getId().toString());
+   		    request.setAttribute("family", lst2);
+   		    break;
+    	 }
+       }
+       
+       // only allow bed/service programs show up.(not external program)
+       List currentAdmissionList = admissionManager.getCurrentAdmissions(Integer.valueOf(demographicNo),providerNo, shelterId);
+       List bedServiceList = new ArrayList();
+       for (int i=0;i<currentAdmissionList.size();i++) {
+          Admission admission1 = (Admission) currentAdmissionList.get(i);
+          ClientCurrentProgram ccp = new ClientCurrentProgram();
+          ccp.setProgramId(admission1.getProgramId());
+          ccp.setProgramName(admission1.getProgramName());
+          ccp.setProgramType(admission1.getProgramType());
+          ccp.setAdmissionDate(admission1.getAdmissionDate());
+          ccp.setDaysInProgram(admission1.getDaysInProgram());
+          bedServiceList.add(ccp);
+       }
+       List currentServiceIntakeList = intakeManager.getActiveServiceIntakeHeaderListByFacility(Integer.valueOf(demographicNo), shelterId, providerNo);
+       Date today = new Date();
+       for (int i=0;i<currentServiceIntakeList.size();i++) {
+         QuatroIntakeHeader qih1 = (QuatroIntakeHeader) currentServiceIntakeList.get(i);
+         ClientCurrentProgram ccp = new ClientCurrentProgram();
+         ccp.setProgramId(qih1.getProgramId());
+         ccp.setProgramName(qih1.getProgramName());
+         ccp.setProgramType(qih1.getProgramType());
+         ccp.setAdmissionDate(qih1.getCreatedOn());
+   	     long diff = today.getTime() - qih1.getCreatedOn().getTime().getTime();
+    	 diff = diff / 1000; // seconds
+         diff = diff / 60; // minutes
+         diff = diff / 60; // hours
+         diff = diff / 24; // days
+         ccp.setDaysInProgram(new Integer((int)diff));
+         bedServiceList.add(ccp);
+       }
+
+       request.setAttribute("clientCurrentPrograms", bedServiceList);
+
+       HealthSafety healthsafety = healthSafetyManager.getHealthSafetyByDemographic(Integer.valueOf(demographicNo));
+       request.setAttribute("healthsafety", healthsafety);
+
+       request.setAttribute("referrals", clientManager.getActiveReferrals(demographicNo,providerNo, shelterId));
+           
+       // bed reservation view
+       if(currentAdmissionList.size()>0){
+         RoomDemographic roomDemographic = roomDemographicManager.getRoomDemographicByDemographic(Integer.valueOf(demographicNo));
+		 request.setAttribute("roomDemographic", roomDemographic);
+       }
+       
+       request.setAttribute("actionParam", actionParam);
 
        return mapping.findForward("edit");
    }
-
+/*
    private void setEditAttributes(ActionForm form, HttpServletRequest request, String demographicNo) {
        
        Integer shelterId=(Integer)request.getSession().getAttribute(KeyConstants.SESSION_KEY_SHELTERID);
@@ -106,52 +175,51 @@ public class QuatroClientSummaryAction extends BaseClientAction {
     	 }
        }
        
-           // only allow bed/service programs show up.(not external program)
-           List currentAdmissionList = admissionManager.getCurrentAdmissions(Integer.valueOf(demographicNo),providerNo, shelterId);
-           List bedServiceList = new ArrayList();
-           for (int i=0;i<currentAdmissionList.size();i++) {
-               Admission admission1 = (Admission) currentAdmissionList.get(i);
-               ClientCurrentProgram ccp = new ClientCurrentProgram();
-               ccp.setProgramId(admission1.getProgramId());
-               ccp.setProgramName(admission1.getProgramName());
-               ccp.setProgramType(admission1.getProgramType());
-               ccp.setAdmissionDate(admission1.getAdmissionDate());
-               ccp.setDaysInProgram(admission1.getDaysInProgram());
-               bedServiceList.add(ccp);
-           }
-           List currentServiceIntakeList = intakeManager.getActiveServiceIntakeHeaderListByFacility(Integer.valueOf(demographicNo), shelterId, providerNo);
-           Date today = new Date();
-           for (int i=0;i<currentServiceIntakeList.size();i++) {
-               QuatroIntakeHeader qih1 = (QuatroIntakeHeader) currentServiceIntakeList.get(i);
-               ClientCurrentProgram ccp = new ClientCurrentProgram();
-               ccp.setProgramId(qih1.getProgramId());
-               ccp.setProgramName(qih1.getProgramName());
-               ccp.setProgramType(qih1.getProgramType());
-               ccp.setAdmissionDate(qih1.getCreatedOn());
-        	   long diff = today.getTime() - qih1.getCreatedOn().getTime().getTime();
-        	   diff = diff / 1000; // seconds
-        	   diff = diff / 60; // minutes
-        	   diff = diff / 60; // hours
-        	   diff = diff / 24; // days
-               ccp.setDaysInProgram(new Integer((int)diff));
-               bedServiceList.add(ccp);
-           }
+       // only allow bed/service programs show up.(not external program)
+       List currentAdmissionList = admissionManager.getCurrentAdmissions(Integer.valueOf(demographicNo),providerNo, shelterId);
+       List bedServiceList = new ArrayList();
+       for (int i=0;i<currentAdmissionList.size();i++) {
+          Admission admission1 = (Admission) currentAdmissionList.get(i);
+          ClientCurrentProgram ccp = new ClientCurrentProgram();
+          ccp.setProgramId(admission1.getProgramId());
+          ccp.setProgramName(admission1.getProgramName());
+          ccp.setProgramType(admission1.getProgramType());
+          ccp.setAdmissionDate(admission1.getAdmissionDate());
+          ccp.setDaysInProgram(admission1.getDaysInProgram());
+          bedServiceList.add(ccp);
+       }
+       List currentServiceIntakeList = intakeManager.getActiveServiceIntakeHeaderListByFacility(Integer.valueOf(demographicNo), shelterId, providerNo);
+       Date today = new Date();
+       for (int i=0;i<currentServiceIntakeList.size();i++) {
+         QuatroIntakeHeader qih1 = (QuatroIntakeHeader) currentServiceIntakeList.get(i);
+         ClientCurrentProgram ccp = new ClientCurrentProgram();
+         ccp.setProgramId(qih1.getProgramId());
+         ccp.setProgramName(qih1.getProgramName());
+         ccp.setProgramType(qih1.getProgramType());
+         ccp.setAdmissionDate(qih1.getCreatedOn());
+   	     long diff = today.getTime() - qih1.getCreatedOn().getTime().getTime();
+    	 diff = diff / 1000; // seconds
+         diff = diff / 60; // minutes
+         diff = diff / 60; // hours
+         diff = diff / 24; // days
+         ccp.setDaysInProgram(new Integer((int)diff));
+         bedServiceList.add(ccp);
+       }
 
-           request.setAttribute("clientCurrentPrograms", bedServiceList);
+       request.setAttribute("clientCurrentPrograms", bedServiceList);
 
-           HealthSafety healthsafety = healthSafetyManager.getHealthSafetyByDemographic(Integer.valueOf(demographicNo));
-           request.setAttribute("healthsafety", healthsafety);
+       HealthSafety healthsafety = healthSafetyManager.getHealthSafetyByDemographic(Integer.valueOf(demographicNo));
+       request.setAttribute("healthsafety", healthsafety);
 
-           request.setAttribute("referrals", clientManager.getActiveReferrals(demographicNo,providerNo, shelterId));
-//       }
-
+       request.setAttribute("referrals", clientManager.getActiveReferrals(demographicNo,providerNo, shelterId));
            
-       /* bed reservation view */
+       // bed reservation view
        if(currentAdmissionList.size()>0){
          RoomDemographic roomDemographic = roomDemographicManager.getRoomDemographicByDemographic(Integer.valueOf(demographicNo));
 		 request.setAttribute("roomDemographic", roomDemographic);
        }
    }
+*/
    
    public void setHealthSafetyManager(HealthSafetyManager healthSafetyManager) {
 	 this.healthSafetyManager = healthSafetyManager;
@@ -185,9 +253,8 @@ public class QuatroClientSummaryAction extends BaseClientAction {
 	 this.intakeManager = intakeManager;
    }
 
-public void setLogManager(LogManager logManager) {
-	this.logManager = logManager;
-}
+   public void setLogManager(LogManager logManager) {
+	 this.logManager = logManager;
+   }
 
-   
 }
